policies/fixtures/container-non-root.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "container-non-root"
  namespace: "devsecops-reference"
  labels:
    app: "sample-api"
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsUser: 10001
    seccompProfile:
      type: "RuntimeDefault"
  containers:
    -
      name: "sample-api"
      image: "devsecops-reference:local"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
        runAsNonRoot: true
      resources:
        limits:
          cpu: "250m"
          memory: "128Mi"
