policies/fixtures/ephemeral-root.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "ephemeral-root"
  namespace: "devsecops-reference"
  labels:
    app: "sample-api"
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    seccompProfile:
      type: "RuntimeDefault"
  containers:
    -
      name: "sample-api"
      image: "devsecops-reference:local"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
      resources:
        limits:
          cpu: "250m"
          memory: "128Mi"
  ephemeralContainers:
    -
      name: "setup"
      image: "devsecops-reference:local"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
        runAsUser: 0
